--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.3",
     "material-icons": "^1.13.12",
     "rxjs": "~7.8.0",
+    "simplebar-angular": "^3.2.4",
     "swiper": "^8.4.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
