--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "material-icons": "^1.13.12",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "simplebar-angular": "^3.2.4",
     "swiper": "^8.4.6",
