refactor auth service

--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "material-icons": "^1.13.12",
+    "ngx-socket-io": "^4.6.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "swiper": "^8.4.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
