--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "material-icons": "^1.13.12",
+    "ngx-pagination": "^6.0.3",
     "ngx-socket-io": "^4.6.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
